update: study paper

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -7,8 +7,30 @@
 }
 
 
-@online{Memory-Descriptor,
-  title        = {The Memory Descriptor},
-  url          = {https://litux.nl/mirror/kerneldevelopment/0672327201/ch14lev1sec1.html},
-  urldate      = {2025-11-07}
+@online{diffusion-model,
+  title        = {Diffusion Model},
+  url          = {https://en.wikipedia.org/wiki/Diffusion_model},
+  urldate      = {2025-12-07}
+}
+
+@article{DBLP:journals/corr/abs-2006-11239,
+  author       = {Jonathan Ho and
+                  Ajay Jain and
+                  Pieter Abbeel},
+  title        = {Denoising Diffusion Probabilistic Models},
+  journal      = {CoRR},
+  volume       = {abs/2006.11239},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2006.11239},
+  eprinttype    = {arXiv},
+  eprint       = {2006.11239},
+  timestamp    = {Tue, 23 Jun 2020 17:57:22 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2006-11239.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@online{kl-divergence,
+  title        = {Kullback-Leibler Divergence},
+  url          = {https://en.wikipedia.org/wiki/Kullback%E2%80%93Leibler_divergence},
+  urldate      = {2025-12-07}
 }
