--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -34,3 +34,23 @@
   url          = {https://en.wikipedia.org/wiki/Kullback%E2%80%93Leibler_divergence},
   urldate      = {2025-12-07}
 }
+
+@article{ANDERSON1982313,
+title = {Reverse-time diffusion equation models},
+journal = {Stochastic Processes and their Applications},
+volume = {12},
+number = {3},
+pages = {313-326},
+year = {1982},
+issn = {0304-4149},
+doi = {https://doi.org/10.1016/0304-4149(82)90051-5},
+url = {https://www.sciencedirect.com/science/article/pii/0304414982900515},
+author = {Brian D.O. Anderson},
+abstract = {Reverse-time stochastic diffusion equation models are defined and it is shown how most processes defined via a forward-time or conventional diffusion equation model have an associated reverse-time model.}
+}
+
+@online{Ito-calculus,
+  title        = {Ito calculus},
+  url          = {https://en.wikipedia.org/wiki/It%C3%B4_calculus},
+  urldate      = {2025-12-07}
+}
