--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -54,3 +54,9 @@ abstract = {Reverse-time stochastic diffusion equation models are defined and it
   url          = {https://en.wikipedia.org/wiki/It%C3%B4_calculus},
   urldate      = {2025-12-07}
 }
+
+@online{Data-encoding,
+  title        = {IBM Quantum Platform Quantum Machine Learning},
+  url          = {https://quantum.cloud.ibm.com/learning/en/courses/quantum-machine-learning/data-encoding#methods-of-encoding},
+  urldate      = {2025-12-13}
+}
