update: model architecture and add trial implementation in report, also update the results.

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -60,3 +60,21 @@ abstract = {Reverse-time stochastic diffusion equation models are defined and it
   url          = {https://quantum.cloud.ibm.com/learning/en/courses/quantum-machine-learning/data-encoding#methods-of-encoding},
   urldate      = {2025-12-13}
 }
+
+@misc{cacioppo2023quantumdiffusionmodels,
+      title={Quantum Diffusion Models}, 
+      author={Andrea Cacioppo and Lorenzo Colantonio and Simone Bordoni and Stefano Giagu},
+      year={2023},
+      eprint={2311.15444},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      url={https://arxiv.org/abs/2311.15444}, 
+}
+
+@online{qdm,
+  title        = {Quantum Diffusion Model},
+  url          = {https://github.com/AndreaCacioppo/quantum-diffusion-models-code},
+  urldate      = {2025-12-13}
+}
+
+
