--- a/latex/main.tex
+++ b/latex/main.tex
@@ -3,6 +3,10 @@
 \usepackage{subcaption}
 \usepackage{caption}
 \usepackage{braket}
+\usepackage{authblk}
+\renewcommand\Authfont{\bfseries}
+\renewcommand\Affilfont{\small\ttfamily}
+
 %\usepackage{indentfirst}
 %\usepackage[hangul]{kotex}
 \usepackage[
@@ -28,11 +32,13 @@ style=numeric
 
 \addbibresource{bibliography.bib}
 
-\author{
-  Jeongbin Jo \\
-  \small\texttt{Yonsei University} \\
-  \small\texttt{jeongbin033@yonsei.ac.kr}
-}
+\author[1]{Jeongbin Jo}
+% author
+\author[2]{Second Author}
+
+% info.
+\affil[1]{Department of Physics \\ Yonsei University \\ \textit{jeongbin033@yonsei.ac.kr}}
+
 
 %\newcommand{\pref}[1]{(\ref{#1})}
 \begin{document}
