--- a/latex/main.tex
+++ b/latex/main.tex
@@ -34,7 +34,7 @@ style=numeric
 
 \author[1]{Jeongbin Jo}
 % author
-\author[2]{Second Author}
+\author[2]{Santanam Wishal}
 
 % info.
 \affil[1]{Department of Physics \\ Yonsei University \\ \textit{jeongbin033@yonsei.ac.kr}}
