--- a/latex/main.tex
+++ b/latex/main.tex
@@ -38,6 +38,7 @@ style=numeric
 
 % info.
 \affil[1]{Department of Physics \\ Yonsei University \\ \textit{jeongbin033@yonsei.ac.kr}}
+\affil[2]{Asia Cyber University \\ \textit{santawishal17@gmail.com}}
 
 
 %\newcommand{\pref}[1]{(\ref{#1})}
