Correct affiliation formatting in main.tex
Fix formatting for affiliation of Eleven Dimension LLC.

Signed-off-by: shannie1983 <39831922+shannie1983@users.noreply.github.com>

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -39,7 +39,7 @@ style=numeric
 % info.
 \affil[1]{Department of Physics \\ Yonsei University \\ \textit{jeongbin033@yonsei.ac.kr}}
 \affil[2]{Asia Cyber University \\ \textit{santawishal17@gmail.com}}
-
+\affil[3]{Eleven Dimension LLC \\ textit{shanjdk2012@gmail.com}
 
 %\newcommand{\pref}[1]{(\ref{#1})}
 \begin{document}
