update: member info.

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -32,14 +32,17 @@ style=numeric
 
 \addbibresource{bibliography.bib}
 
-\author[1]{Jeongbin Jo}
 % author
+\author[1]{Jeongbin Jo}
 \author[2]{Santanam Wishal}
+\author[3]{Shah Md Khalil Ullah}
+\author[4]{Shan Kowalski}
 
 % info.
 \affil[1]{Department of Physics \\ Yonsei University \\ \textit{jeongbin033@yonsei.ac.kr}}
 \affil[2]{Asia Cyber University \\ \textit{santawishal17@gmail.com}}
-\affil[3]{Eleven Dimension LLC \\ textit{shanjdk2012@gmail.com}
+\affil[3]{Khulna University of Engineering and Technology \\ \textit{hamimkhandakar222@gmail.com}}
+\affil[4]{Eleven Dimension LLC \\ \textit{shanjdk2012@gmail.com}}
 
 %\newcommand{\pref}[1]{(\ref{#1})}
 \begin{document}
